# kicad-wakatime

./: .gitignore  README.md  index.html  script.js  style.css
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
kicad-wakatime/: Cargo.toml  debug.plist
kicad-wakatime/src/: lib.rs  main.rs  traits.rs  ui.rs
waka-kicad/: Cargo.toml
waka-kicad/src/: lib.rs  main.rs  traits.rs
