[package]
name = "kicad-wakatime"
version = "0.0.0"
edition = "2021"

[package.metadata.bundle]
name = "kicad-wakatime"
identifier = "com.hackclub.kicad-wakatime"

[dependencies]
active-win-pos-rs = "0.8.3"
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
fltk = "1.4.36"
home = "0.5.9"
# kicad-api-rs = "0.0.1"
kicad-api-rs = { git = "https://gitlab.com/sporeball/kicad-rs.git" }
log = "0.4.22"
mouse_position = "0.1.4"
notify = "7.0.0"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
rust-ini = "0.21.1"
serde = "1.0.215"
serde_json = "1.0.133"
sysinfo = "0.32.0"
thiserror = "2.0.3"
zip-extract = "0.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"

