[package]
name = "kicad-wakatime"
version = "0.2.1"
edition = "2021"

[package.metadata.bundle]
name = "kicad-wakatime"
identifier = "com.hackclub.kicad-wakatime"

[dependencies]
active-win-pos-rs = "0.8.4"
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
eframe = "0.29.1"
egui-modal = "0.5.0"
egui_logger = "0.6.1"
env_logger = "0.11.5"
home = "0.5.9"
# kicad-api-rs = "0.0.1"
# kicad-api-rs = { git = "https://gitlab.com/sporeball/kicad-rs.git" }
log = "0.4.22"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
mouse_position = "0.1.4"
multi_log = "0.1.2"
# nng = "1.0.1"
notify = "7.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
rfd = "0.15.1"
rust-ini = "0.21.1"
serde = "1.0.215"
serde_json = "1.0.133"
simplelog = "0.12.2"
thiserror = "2.0.3"
zip = "2.2.2"
zip-extract = "0.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"

